Added multiple levels
Added ability to go to next level after one complete
If all targets filled up, then add a "next" button
Fixed: Multiple score cells light up when one match is made
Removed split button and interactivity when fraction entered into scoring cell
Drag fraction after assembly
Animate stroke on score box when a match is made
Center "my fractions" text above the target boxes
Only collect a fraction if the value is correct
# 0.00.76 (64594) Jun 1, 2012
Fixed: Tetris "L" shapes are off by a factor of 2 for equality tests
Increased bar animation time by 25% (from 0.3 sec to 0.375 sec)
# 0.00.75 (64581) Jun 1, 2012
Improved performance when animating bar chart bars even further
# 0.00.74 (64576) Jun 1, 2012
Improved performance when animating bar chart bars
# 0.00.73 (64573) Jun 1, 2012
Renamed "Fraction Matching Game" to "Fraction Matcher"
Added new sim for "Fraction Matching Game"
# 0.00.72 (64542) May 31, 2012
Build a fraction tab: Block against unnecessary repainting for target cell highlighting
Build a fraction tab: Fixed: Score cell should pulsate then stay highlighted
Build a fraction tab: Made number toolbox light gray
Build a fraction tab: Removed fraction skeleton from toolbox, moved to play area
# 0.00.71 (64503) May 30, 2012
Matching game tab: Improved performance/smoothness for bar animation and fly back animation
Matching game tab: Make sure not all representations are numeric and not all non-numeric
# 0.00.70 (64490) May 30, 2012
Matching game tab: Added random fill for pies and horizontal/vertical slices
Matching game tab: Fixed buggy outline for triangles
Matching game tab: Fixed buggy outline for circles
Matching game tab: Made outline stroke thicker than slice stroke
Matching game tab: Converted PiesSetNode to Pattern
Matching game tab: Converted VerticalBarsNode to Pattern
Matching game tab: Converted HorizontalBarsNode to Pattern