@@ -12,6 +12,7 @@ import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.colorado.phet.fractionsintro.intro.model.Fraction;
 import edu.umd.cs.piccolo.PNode;
+import edu.umd.cs.piccolo.activities.PActivity;
 import edu.umd.cs.piccolo.activities.PInterpolatingActivity;
 import edu.umd.cs.piccolo.util.PUtil;
 
@@ -26,6 +27,7 @@ public class ScoreBoxNode extends PNode {
     public final Fraction fraction;
     public final PhetPPath path;
     private boolean completed;
+    private PInterpolatingActivity activity;
 
     public ScoreBoxNode( final int numerator, final int denominator, final Property<List<Fraction>> matches ) {
         this.path = new PhetPPath( new RoundRectangle2D.Double( 0, 0, 140, 150, 30, 30 ), controlPanelStroke, Color.darkGray ) {{
@@ -43,13 +45,26 @@ public class ScoreBoxNode extends PNode {
                         }
                     } ).isSome() && !completed ) {
                         setStrokePaint( Color.red );
-                        final PInterpolatingActivity ta = new PInterpolatingActivity( 2000, PUtil.DEFAULT_ACTIVITY_STEP_RATE ) {
+                        doTerminate();
+                        activity = new PInterpolatingActivity( 2000, PUtil.DEFAULT_ACTIVITY_STEP_RATE ) {
                             public void setRelativeTargetValue( final float zeroToOne ) {
                                 setStroke( new BasicStroke( (float) ( Math.abs( Math.sin( zeroToOne * 4 * 2 ) ) * 4 ), BasicStroke.CAP_ROUND, BasicStroke.JOIN_ROUND, 1f ) );
                             }
                         };
-                        ta.setSlowInSlowOut( false );
-                        addActivity( ta );
+                        activity.setSlowInSlowOut( false );
+                        addActivity( activity );
+                    }
+                    else {
+                        doTerminate();
+                        setStrokePaint( Color.darkGray );
+                        setStroke( controlPanelStroke );
+                    }
+                }
+
+                //Stop the animation in order to change state
+                private void doTerminate() {
+                    if ( activity != null && activity.isStepping() ) {
+                        activity.terminate( PActivity.TERMINATE_AND_FINISH );
                     }
                 }
             } );
